--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,12 +10,38 @@
 }
 
 .main {
-  padding: 5rem 0;
+  margin: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.scoreList {
+  max-height: 300px;
+  overflow-y: auto;
+  border: 1px solid #eaeaea;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.scoreList ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.scoreList li {
+  margin: 5px 0;
+}
+
+.scoreList a {
+  color: #80c8ff;
+  text-decoration: none;
+}
+
+.scoreList a:hover {
+  text-decoration: underline;
 }
 
 .footer {
@@ -30,6 +56,7 @@
 .footer a {
   color: #db74f7;
   text-decoration: none;
+  margin-left: 5px;
 }
 
 .footer a:hover {
@@ -44,26 +71,29 @@
 }
 
 .input {
-  margin: 1rem 0;
+  margin: 0.01rem 0;
   padding: 0.5rem;
   font-size: 1rem;
+  width: 200px;
 }
 
 .button {
-  margin: 2rem 0;
+  margin: 0.01rem 0;
   padding: 0.5rem 1rem;
   font-size: 1rem;
+  font-weight: 600;
   background-color: #db74f7;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  width: 200px;
 }
 
 .gameArea {
   width: 800px;
   height: 400px;
-  border: 2px solid #ffffff;
+  border: 1px solid #ffffff;
   margin: 1rem 0;
   position: relative;
 }
@@ -79,4 +109,16 @@
 
 .highScores li {
   margin: 0.5rem 0;
+}
+
+.startContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.garryImage {
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
