Fix useEffect dependency warning

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,10 +38,12 @@
 .garryImage {
   max-width: 100%;
   height: auto;
+  margin-top: 1rem 0;
+  margin-bottom: 1rem 0;
 }
 
 .input {
-  margin: 1rem 0;
+  margin: 0;
   padding: 0.5rem;
   font-size: 1rem;
   width: 100%;
@@ -49,10 +51,10 @@
 }
 
 .button {
-  margin: 1rem 0;
+  margin: 0;
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  background-color: #0070f3;
+  background-color: #db74f7;
   color: white;
   border: none;
   border-radius: 5px;
@@ -98,7 +100,7 @@
 }
 
 .scoreList a {
-  color: #0070f3;
+  color: #80c8ff;
   text-decoration: none;
 }
 
@@ -116,7 +118,7 @@
 }
 
 .footer a {
-  color: #0070f3;
+  color: #db74f7;
   text-decoration: none;
   margin-left: 5px;
 }
